Fixed contact form responsive issues on small screens

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,5 +10,5 @@ body {
 }
 
 .customContactInput {
-    @apply outline-none bg-slate-400/10 rounded-sm border-b px-6 py-4 border-[#242424] text-gray-500 placeholder-gray-500 transition-all
+    @apply outline-none bg-slate-400/10 rounded-sm border-b border-[#242424] text-gray-500 placeholder-gray-500 transition-all
 }
